--- a/finalfantasy.html
+++ b/finalfantasy.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <title>Final Fantasy</title>
   <style>
     body,
@@ -40,8 +42,8 @@
     #col {
       width: 50%;
       background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),
-      no-repeat center center/cover url(./finalfantasy/main.jpg);
-      
+        no-repeat center center/cover url(./finalfantasy/main.jpg);
+
       color: white;
       display: flex;
       flex-direction: column;
@@ -51,17 +53,20 @@
 
     /* 左側 */
 
-    #col .ps4{
+    #col .ps4 {
       text-align: center;
       width: 80%;
     }
+
     .ps4 h1 {
       margin: 0;
     }
-    .ps4 p{
+
+    .ps4 p {
       margin: 0;
     }
-    #col img{
+
+    #col img {
       width: 40%;
       /* height: 20%; */
       /* object-fit: contain; */
@@ -77,7 +82,7 @@
       display: flex;
       flex-direction: row;
       color: black;
-      background: url(./finalfantasy/cloud.png) no-repeat right bottom/45%,
+      background: url(./finalfantasy/cloud.png) no-repeat right bottom/40%,
         gray;
     }
 
@@ -85,37 +90,44 @@
       background-color: black;
       color: white;
       flex-direction: row-reverse;
-      background: url(./finalfantasy/tifa.png) no-repeat left bottom/45%,
+      background: url(./finalfantasy/tifa.png) no-repeat 10px bottom/40%,
         black;
     }
 
     #row .card {
       display: flex;
       flex-direction: column;
-      justify-content:  center;
+      justify-content: center;
       align-items: flex-start;
-      /* width: 50%; */
       height: 100%;
       text-align: left;
-      margin-right: 50px;
       margin-left: 50px;
+      /* margin-right: 50px; */
+      /* width: 110%; */
+      /* margin-bottom: 0; */
     }
 
     #row .card:first-child {
       width: 50%;
-      flex-shrink:1;
+      /* flex-shrink:1; */
     }
-    #row .chengePadding{
+
+    #row .chengePadding {
       padding-left: 0px;
       padding-right: 30px;
-      margin-right:20px;
+      margin-right: 55px;
     }
-    #row .card h1{
+
+    #row .card h1 {
       margin-bottom: 0;
     }
-    #row .card p{
+
+    #row .card p {
       margin-top: 0;
+      width: 115%;
+      margin-bottom: 0;
     }
+
     #row .card img {
       height: 100%;
       object-fit: contain;
@@ -131,10 +143,10 @@
       <div id="col">
         <div class="ps4">
           <img src="./finalfantasy/ps4-ff7.png" alt="">
-        
+
           <h1>AVAILABLE NOW</h1>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam libero mollitia perferendis animi
-          consequatur reprehenderit commodi
+            consequatur reprehenderit commodi
           </p>
         </div>
       </div>
@@ -145,8 +157,9 @@
           <div class="card">
             <h1>Cloud</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam libero mollitia perferendis animi
-              consequatur reprehenderit commodi
-              </p>
+              consequatur aaaaa reprehenderit commodiconsequatur reprehenderit commodi consequatur reprehenderit
+              commodiconsequatur reprehenderit commodi
+            </p>
           </div>
 
           <!-- <div class="card">
@@ -159,7 +172,9 @@
           <div class="card chengePadding">
             <h1>Tifa</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nostrum quas, quae ut voluptas eveniet, vel
-              itaque maiores dolore molestias?
+              itaque maiores dolore molestias?or sit amet consectetur adipisicing elit. Ipsam libero mollitia
+              perferendis animi
+              consequatur aaaaa reprehend
             </p>
           </div>
 
