--- a/chess.html
+++ b/chess.html
@@ -18,6 +18,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      font-family: "標楷體";
     }
     /* #bogbox{
       width: 100%;
@@ -29,7 +30,6 @@
 
     h1 {
       writing-mode: vertical-lr;
-      font-family: "標楷體";
       font-weight: 500;
       font-size: 1.8rem;
     }
@@ -38,7 +38,6 @@
       width: 550px;
       height: 550px;
       border: 1px solid black;
-      background-color: pink;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -48,7 +47,6 @@
       width: 460px;
       height: 480px;
       border: 1px solid black;
-      background-color: skyblue;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -57,7 +55,6 @@
 
     /* 格子 */
     #chessbox .row {
-      background-color: antiquewhite;
       width: 100%;
       height: 11.1111%;
       border-bottom: 1px solid black;
@@ -74,12 +71,14 @@
       height: 100%;
       border-right: 1px solid black;
     }
+    #chessbox .row:nth-child(1) .col:nth-child(4)::before {
+      content: "";
+      border: 1px solid brown;
+      background-color: brown;
+    }
     #chessbox .river {
-      /* width: 12.5%;
-      height: 100%; */
       border-right: none;
       text-align: right;
-      font-family: "標楷體";
       font-size: 2rem;
       line-height: 1.7;
       padding-right: 2px;
@@ -95,8 +94,51 @@
 
     /* 棋子 */
     #box{
-      width: 90%;
-      height: 90%;
+      width: 520px;
+      height: 530px;
+      position: absolute;
+    }
+
+    #box .boxrow{
+      width: 100%;
+      height: 10%;
+      display: flex;
+      flex-direction: row;
+    }
+
+    #box .boxcol{
+      width: 11.1111%;
+      height: 100%;
+      /* background-color: ; */
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    /* 黑棋 */
+    #box .boxcol .circlechess{
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 1px solid black;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.8rem;
+    }
+
+    #box .justifycontent-around{
+      justify-content:space-around;
+    }
+    #box .justifycontent-between{
+      justify-content:space-between;
+    }
+
+    /* 紅棋子 */
+    #box .red{
+      color: rgb(216, 2, 2);
     }
 
   </style>
@@ -209,9 +251,129 @@
         </div>
       </div>
 
-      <!-- <div id="box"> 
+      <div id="box"> 
 
-      </div> -->
+        
+        <!-- 黑棋子 -->
+        <div class="boxrow">
+          <div class="boxcol">
+            <div class="circlechess"> 車 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 馬 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 象 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 士 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 將 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 士 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 象 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 馬 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 車 </div>
+          </div>
+        </div>
+        <div class="boxrow"></div>
+        <div class="boxrow justifycontent-around">
+          <div class="boxcol">
+            <div class="circlechess"> 包 </div>
+          </div>
+          <div class="boxcol"></div>
+          <div class="boxcol ">
+            <div class="circlechess"> 包 </div>
+          </div>
+        </div>
+        <div class="boxrow justifycontent-between">
+          <div class="boxcol">
+            <div class="circlechess"> 卒 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 卒 </div>
+          </div>
+          <div class="boxcol ">
+            <div class="circlechess"> 卒 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 卒 </div>
+          </div>
+          <div class="boxcol ">
+            <div class="circlechess"> 卒 </div>
+          </div>
+        </div>
+        <div class="boxrow"></div>
+        <div class="boxrow"></div>
+
+        <!-- 紅棋子 -->
+        <div class="boxrow justifycontent-between red">
+          <div class="boxcol">
+            <div class="circlechess"> 兵 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 兵 </div>
+          </div>
+          <div class="boxcol ">
+            <div class="circlechess"> 兵 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 兵 </div>
+          </div>
+          <div class="boxcol ">
+            <div class="circlechess"> 兵 </div>
+          </div>
+        </div>
+        <div class="boxrow justifycontent-around red">
+          <div class="boxcol">
+            <div class="circlechess"> 炮 </div>
+          </div>
+          <div class="boxcol"></div>
+          <div class="boxcol ">
+            <div class="circlechess"> 炮 </div>
+          </div>
+        </div>
+        <div class="boxrow"></div>
+
+        <div class="boxrow red">
+          <div class="boxcol">
+            <div class="circlechess"> 俥 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 傌 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 相 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 仕 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 帥 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 仕 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 相 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 傌 </div>
+          </div>
+          <div class="boxcol">
+            <div class="circlechess"> 俥 </div>
+          </div>
+        </div>
+
+      </div>
     </div>
 
     <h1> 圖畫裡，龍不吟，虎不嘯，小小書僮可笑可笑 </h1>
